# lxqt-themes

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
.github/: ISSUE_TEMPLATE.md
graphics/: README
icons/: CMakeLists.txt
palettes/: Adwaita  Adwaita-Dark  Ambiance  Arc  Arc-Dark  Arch-Colors  CMakeLists.txt  Clearlooks  Dark  Frost  Graphite  GruvboxDark  GruvboxLight  KDE-Plasma  Kvantum  Leech  Light  Plastik  Silver  Silver-bright  Silver-dark  Valendas  adwaita  adwaita-dark  arc  arc-dark  arc-darker  gruvbox
themes/: CMakeLists.txt
themes/Adwaita/: lxqt-leave.qss  lxqt-notificationd.qss  lxqt-panel.qss  lxqt-panel.qss.save  lxqt-runner.qss
themes/Adwaita-Dark/: lxqt-leave.qss  lxqt-notificationd.qss  lxqt-panel.qss  lxqt-runner.qss
themes/Arc/: lxqt-notificationd.qss  lxqt-panel.qss  lxqt-runner.qss
themes/Arc-Dark/: lxqt-panel.qss  lxqt-runner.qss
themes/Arch Colors/: lxqt-panel.qss  wallpaper.cfg
themes/Arch-Colors/: lxqt-app-switcher.qss  lxqt-config.qss  lxqt-notificationd.qss  lxqt-panel.qss  lxqt-runner.qss  lxqt-sudo.qss  wallpaper.cfg
themes/Clearlooks/: lxqt-config.qss  lxqt-leave.qss  lxqt-notificationd.qss  lxqt-panel.qss  lxqt-runner.qss  wallpaper.cfg
themes/Clearlooks-Darkpurpy/: lxqt-panel.qss
themes/Clearlooks-Phenix-Cinnabar/: lxqt-panel.qss  lxqt-runner.qss
themes/Clearlooks-Phenix-Darkpurpy/: lxqt-notificationd.qss  lxqt-panel.qss  lxqt-runner.qss
themes/Frost/: lxqt-runner.qss
themes/KDE-Plasma/: lxqt-config.qss  lxqt-notificationd.qss  lxqt-panel.qss  lxqt-runner.qss
themes/Leech/: lxqt-config.qss  lxqt-leave.qss  lxqt-notificationd.qss  lxqt-panel.qss  lxqt-runner.qss  wallpaper.cfg
themes/Plastik/: lxqt-notificationd.qss  (+2 more)
wallpapers/: CMakeLists.txt  License  Licenses
(+90 files in other folders)
